gccida/g1/instantiate_virtual_regs_1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4295:6: error: use of undeclared identifier 'v48'
rtx *v48; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4297:4: error: expected ';' after expression
rtx v50; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4297:5: error: use of undeclared identifier 'v50'
rtx v50; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4299:4: error: expected ';' after expression
rtx old; // [rsp+8h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4299:5: error: use of undeclared identifier 'old'
rtx old; // [rsp+8h] [rbp-50h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4300:4: error: expected ';' after expression
rtx src; // [rsp+10h] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4300:5: error: use of undeclared identifier 'src'
rtx src; // [rsp+10h] [rbp-48h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4341:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v29 = ( __int16 *)v3[1]; 
                  ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4389:1: error: use of undeclared identifier 'src'
src = ( rtx)v3[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4391:30: error: use of undeclared identifier 'src'
instantiate_virtual_regs_1( &src, 0LL, 0); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4392:17: error: use of undeclared identifier 'src'
if ( *( _WORD *)src != 61 && *( _WORD *)src != 75 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4392:41: error: use of undeclared identifier 'src'
if ( *( _WORD *)src != 61 && *( _WORD *)src != 75 ) 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4395:6: error: use of undeclared identifier 'src'
v9 = src; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4396:17: error: use of undeclared identifier 'src'
if ( *( _WORD *)src != 61 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4397:21: error: use of undeclared identifier 'src'
v9 = force_operand( src, 0LL); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4404:39: error: expected expression
v13 = validate_change( object, ( rtx *)&v3[1], v11, 0); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4409:36: error: expected expression
instantiate_virtual_regs_1( ( rtx *)v3->fld, object, extra_insns); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4410:14: error: expected expression
fld = ( rtx *)&v3[1]; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/function.c:4415:65: error: expected expression
if ( *( _WORD *)rtx == 66 && instantiate_virtual_regs_1( ( rtx *)rtx->fld, rtx, 0) ) 
                                                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/instantiate_virtual_regs_1/src/obj/function.o] Error 1
